Mention `--add-exports` in the docs for using g-j-f as a library
https://github.com/google/google-java-format/pull/760#pullrequestreview-902082926

PiperOrigin-RevId: 434504969